--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
     <div id="infografia" class="content-section">
         <div style="display: flex; align-items: flex-start;">
-            <img src="/img/gettyimages-1144373719_41854331_20230303123108.jpg" alt="Imagen" style="max-width: 300px; height: auto; margin-right: 20px;">
+            <img src="/img/Señora.jpg" alt="Imagen" style="max-width: 300px; height: auto; margin-right: 20px;">
             <div>
                 <h2>Ida Vitale</h2> <!-- Nombre a la derecha de la imagen -->
                 <p>Ida Vitale (Montevideo, 2 de noviembre de 1923- ). Poeta y escritora uruguaya.
