--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
 
     <div id="infografia" class="content-section">
         <div style="display: flex; align-items: flex-start;">
-            <img src="/img/señora.jpg" alt="Imagen" style="max-width: 300px; height: auto; margin-right: 20px;">
+            <img src="img/señora.jpg" alt="Imagen" style="max-width: 300px; height: auto; margin-right: 20px;">
             <div>
-                <h2>Ida Vitale</h2> <!-- Nombre a la derecha de la imagen --->
+                <h2>Ida Vitale</h2>
                 <p>Ida Vitale (Montevideo, 2 de noviembre de 1923 ). Poeta y escritora uruguaya.
                     Pertenece a la misma generación de escritores uruguayos que Juan Carlos Onetti e Idea Vilariño, la Generación del 45. Destaca por sus labores realizadas en el campo de la crítica literaria, traducción, poesía, ensayo y enseñanza.
                     Se licencia en Humanidades en Uruguay, lo que da paso a una etapa como profesora y colaboraciones en diversas revistas como Marcha, Asir, La Licorne, Época, Clinamen y Maldoror, en estas dos últimas realizando labores de dirección.
