--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
     <div id="infografia" class="content-section">
         <div style="display: flex; align-items: flex-start;">
-            <img src="img/señora.jpg" alt="Imagen" style="max-width: 300px; height: auto; margin-right: 20px;">
+            <img src="Señora.jpg" alt="Imagen" style="max-width: 300px; height: auto; margin-right: 20px;">
             <div>
                 <h2>Ida Vitale</h2>
                 <p>Ida Vitale (Montevideo, 2 de noviembre de 1923 ). Poeta y escritora uruguaya.
