--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
     <ul class="menu">
         <li><a href="#" onclick="mostrarSeccion('infografia')">Inicio</a></li>
-        <li><a href="#" onclick="mostrarSeccion('poema')">Poema</a></li>
+        <li><a href="#" onclick="mostrarSeccion('poema')">Poemas</a></li>
         <li><a href="#" onclick="mostrarSeccion('contact')">Contáctame</a></li>
         <li><a href="#" onclick="mostrarSeccion('tutorial')">Tutorial</a></li>
     </ul>
