--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
     <!-- Sección de Poema con categorías -->
     <div id="poema" class="content-section">
-        <div class="section-title">Pick a Section</div>
+        <div class="section-title">Temas de poemas</div>
         <div class="poem-categories">
             <ul>
                 <li><a href="#" onclick="togglePoemList('cosmos')">A Dance Through the Cosmos</a></li>
